--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/1-NetSci-Logistics/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-06T15:30:58Z</date>
+						<date>2019-03-07T14:25:03Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -244,11 +244,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								8dbhE3buR38j
-								PkcCZZhLRw==
+								Nh6hpQztZB2/
+								09917pp82w==
 								</data>
 								<key>Size</key>
-								<integer>122065</integer>
+								<integer>122096</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
