--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T21:33:33Z</date>
+						<date>2019-03-07T14:54:21Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -414,31 +414,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ZTAfqWyrJsvt
-								LGQeJXiwGQ==
+								yzMiA4Y1PxJV
+								GGZ6SwFRTA==
 								</data>
 								<key>Size</key>
-								<integer>592940</integer>
+								<integer>597314</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								GFSwqX00hHEe
-								zQeEVo+cPw==
+								BopWyKsstEjd
+								FMSHGGJ4pg==
 								</data>
 								<key>Size</key>
-								<integer>41313</integer>
+								<integer>41495</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								KUktwxc8w3dE
-								Rhm6YJHyPw==
+								PchGVSgyS6nZ
+								mo14337/SQ==
 								</data>
 								<key>Size</key>
-								<integer>454899</integer>
+								<integer>458997</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
