neo4j logo netsci sponsor
neo4j logo netsci sponsor

--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -9200,7 +9200,7 @@
 					<key>page59 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-05T21:33:34Z</date>
+						<date>2019-03-07T15:15:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -9365,6 +9365,16 @@
 								<key>Size</key>
 								<integer>83593</integer>
 							</dict>
+							<key>files/stacks-image-805fb33.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								wmr3y64p1dLv
+								Ha2AV71VQQ==
+								</data>
+								<key>Size</key>
+								<integer>2522</integer>
+							</dict>
 							<key>files/stacks-image-8e88332-100x104.png</key>
 							<dict>
 								<key>Digest</key>
@@ -9479,11 +9489,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								66/HpJ1DOo82
-								aM44WYfkQw==
+								3EcCoogbWNcG
+								jTYLs8QLJw==
 								</data>
 								<key>Size</key>
-								<integer>144414</integer>
+								<integer>143240</integer>
 							</dict>
 							<key>files/stacks_page_page59.js</key>
 							<dict>
@@ -9499,11 +9509,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								IpFuVvV6XbFT
-								9FDEkDl3lw==
+								jNDFfBk1Dsev
+								kowYhtBURg==
 								</data>
 								<key>Size</key>
-								<integer>75278</integer>
+								<integer>74968</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13696,7 +13706,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-07T14:54:21Z</date>
+						<date>2019-03-07T15:15:05Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14735,8 +14745,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jZn2pwdFsP3l
-								lLfFgtuw8Q==
+								ZSwe0d4hArQO
+								yWMHI8folA==
 								</data>
 								<key>Size</key>
 								<integer>3711</integer>
@@ -14883,7 +14893,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEYtBAGRRyADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEYtn2+tCCADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -14893,14 +14903,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRi0EAZF
-				u4AM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRi2fb60
+				poAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBGLQQBkXl
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBGLZ9vrTQ
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -14910,7 +14920,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBGLQQBkYGgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBGLZ9vrTqgAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -14920,7 +14930,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBGLQQBkYogAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBGLZ9vrUDgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
