changed WINS to wednesday
changed WINS to wednesday

--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/ChildPages/3-NetSci-Schedule/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:45Z</date>
+						<date>2019-03-13T19:03:06Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -414,18 +414,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yzMiA4Y1PxJV
-								GGZ6SwFRTA==
+								+yjgWo5GFg2z
+								rTGtaaa5oA==
 								</data>
 								<key>Size</key>
-								<integer>597314</integer>
+								<integer>597207</integer>
 							</dict>
 							<key>files/stacks_page_page55.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BopWyKsstEjd
-								FMSHGGJ4pg==
+								2IgKz1L8lYsf
+								cWmC0N0DKQ==
 								</data>
 								<key>Size</key>
 								<integer>41495</integer>
@@ -434,11 +434,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fgXEt5CJfQvB
-								PfstdoIoCQ==
+								FiGMv5Zrpsdg
+								6H51bwJmBw==
 								</data>
 								<key>Size</key>
-								<integer>459101</integer>
+								<integer>459930</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
