--- a/vermontcomplexsystems-foundation.rw8/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Contents.plist
@@ -3674,7 +3674,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-13T21:21:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3779,16 +3779,6 @@
 								<key>Size</key>
 								<integer>13322</integer>
 							</dict>
-							<key>files/stacks-image-742d922-1000x196.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								bj1Ufxtf18FB
-								KieA9kLA6Q==
-								</data>
-								<key>Size</key>
-								<integer>75517</integer>
-							</dict>
 							<key>files/stacks-image-79c18a1-300x218.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3853,11 +3843,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4KhjyK24WJ+v
-								r29t6aIl6Q==
+								fKyZry4md4+d
+								tIfkQOpFLQ==
 								</data>
 								<key>Size</key>
-								<integer>54513</integer>
+								<integer>54248</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -5940,7 +5930,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:46Z</date>
+						<date>2019-03-13T21:21:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -6054,16 +6044,6 @@
 								</data>
 								<key>Size</key>
 								<integer>336849</integer>
-							</dict>
-							<key>files/stacks-image-55f5c6b-298x58.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								5akV9inyL/Zr
-								qczaTP5ZFw==
-								</data>
-								<key>Size</key>
-								<integer>14820</integer>
 							</dict>
 							<key>files/stacks-image-580baf6-248x248.jpg</key>
 							<dict>
@@ -6209,11 +6189,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								YCW+RszxLxsA
-								M7+W7iNYXw==
+								tqsyf1dfASY2
+								pIJ1y809bg==
 								</data>
 								<key>Size</key>
-								<integer>143833</integer>
+								<integer>143430</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -6229,11 +6209,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								6HXbW7q5iOq4
-								CkFw8dDNrQ==
+								Urt6hf/VJLwe
+								ddgvRASy7Q==
 								</data>
 								<key>Size</key>
-								<integer>102602</integer>
+								<integer>100604</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13574,7 +13554,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-13T18:59:12Z</date>
+						<date>2019-03-13T21:21:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -13603,11 +13583,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								qFgF81fSr1jp
-								LPTku/ERDQ==
+								G8TZ1gvMsGwc
+								C9bDS/8P+A==
 								</data>
 								<key>Size</key>
-								<integer>5479</integer>
+								<integer>5447</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -13686,7 +13666,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-13T18:59:12Z</date>
+						<date>2019-03-13T21:21:53Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -14725,11 +14705,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								7bI6ZlYUfavB
-								r32x1RFCbw==
+								arzyO6CI4z8W
+								MBe2nlJRhw==
 								</data>
 								<key>Size</key>
-								<integer>4599</integer>
+								<integer>3748</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -14873,7 +14853,7 @@
 				RDNEMjJDN0JDMUYxXxA0UERGIEZvciBQYXJ0aWNpcGFu
 				dHMgU09TIFN5bXBvc2l1bSAyMDE4IHNjaGVkdWxlLnBk
 				Zl8QJDdBNkY5RUNELUZDMjItNDg4NC1COTFFLTU3QjlB
-				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEcxbh6yjaADNIe
+				NzZEQjMxM9JDC0RFV05TLnRpbWUjQcEc1ftwx8GADNIe
 				H0dIVk5TRGF0ZaJHI9MJCgtKTE6hS4AOoU2AD4AQXxAt
 				c2Z0cDovY21wbHhzeXMudzMudXZtLmVkdS93d3ctcm9v
 				dC90ZW1wbGF0ZXJ5CNIeH1JTXxATTlNNdXRhYmxlRGlj
@@ -14883,14 +14863,14 @@
 				FoAVXxAkMkU4QzdEREMtQUVCNC00MUZCLUJGRUQtRTZC
 				OEMwRDQ3QzkzXxAjUEZEIGZvciBwYXJ0aWNpcGFudHMg
 				SFdCIEFnZW5kYS5wZGZfECQ1RjgwNjhENS0wNDgyLTQx
-				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRzFuHrK
-				xYAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
+				MDItQTc3QS0xODU2RUYwOUZBRUXSQwtoRSNBwRzV+3DI
+				YIAM0wkKC2ttTqFsgBihTYAPgBBfEC1zZnRwOi9jbXBs
 				eHN5cy53My51dm0uZWR1L3d3dy1yb290L3RlbXBsYXRl
 				cnnaLS4LLzAxEzIzNDVzNxYWd3h5ensIgCCAEYAAgACA
 				HoAbgBqAHYAcXxAkMzExQ0JERDItOTJCNy00MDE4LUIw
 				OTgtNDhGMjhFMEQwOUFGXxAcb2N0b3B1c19pY29uX3Ry
 				YW5zcGFyZW50LnBuZ18QJDAzQTRDMzNCLTY2NjAtNDMx
-				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBHMW4esr3
+				Mi1BQkIxLURERDE3ODVGRjkxM9JDC4BFI0HBHNX7cMiT
 				gAzTCQoLg4VOoYSAH6FNgA+AEF8QLXNmdHA6L2NtcGx4
 				c3lzLnczLnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVy
 				eV8Qbi92YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19w
@@ -14900,7 +14880,7 @@
 				kpOUCIAogBGAAIAAgCaAI4AigCWAJF8QJEVCN0EwMEJB
 				LTI0RTMtNDY4Qi1CNDU2LTlDMjM3QjgwRDBFQ1tmYXZp
 				Y29uLmljb18QJEE1NDVEMzc1LTFCNkItNEU5My1CQjU3
-				LTEyNEY1NzEyMEZFMtJDC5lFI0HBHMW4essZgAzTCQoL
+				LTEyNEY1NzEyMEZFMtJDC5lFI0HBHNX7cMi9gAzTCQoL
 				nJ5OoZ2AJ6FNgA+AEF8QLXNmdHA6L2NtcGx4c3lzLncz
 				LnV2bS5lZHUvd3d3LXJvb3QvdGVtcGxhdGVyeV8QXS92
 				YXIvZm9sZGVycy82Ni9oX252bng0OTVmc19wMGxteGI3
@@ -14910,7 +14890,7 @@
 				ECQ0MTExRkI1Mi1BMjJBLTRENjUtODY5Mi1CRTYzMEU2
 				RENBNkNfEBRhcHBsZS10b3VjaC1pY29uLnBuZ18QJEFC
 				NTBGRDUyLUE1NEUtNEYyMi05OTRELUUxNUE3RUYyMjRB
-				MtJDC7JFI0HBHMW4ess6gAzTCQoLtbdOobaAL6FNgA+A
+				MtJDC7JFI0HBHNX7cMjWgAzTCQoLtbdOobaAL6FNgA+A
 				EF8QLXNmdHA6L2NtcGx4c3lzLnczLnV2bS5lZHUvd3d3
 				LXJvb3QvdGVtcGxhdGVyeV8QZi92YXIvZm9sZGVycy82
 				Ni9oX252bng0OTVmc19wMGxteGI3Z3RwcDQwMDAwZ3Ev
