--- a/vermontcomplexsystems-foundation.rw8/RWUIState.plist
+++ b/vermontcomplexsystems-foundation.rw8/RWUIState.plist
@@ -6,6 +6,7 @@
 	<array>
 		<string>page3</string>
 		<string>page16</string>
+		<string>page36</string>
 		<string>page53</string>
 		<string>page69</string>
 	</array>
@@ -15,9 +16,11 @@
 	<true/>
 	<key>projectViewWidth</key>
 	<real>228</real>
+	<key>selectedInspectorTab</key>
+	<string>pageSettings</string>
 	<key>selectedItems</key>
 	<array>
-		<string>page55</string>
+		<string>page49</string>
 	</array>
 	<key>selectedMode</key>
 	<integer>0</integer>
