--- a/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw8/Pages/06-Events-and-Programs/ChildPages/05-NetSci-2019/Contents.plist
@@ -35,7 +35,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2019-03-08T17:38:45Z</date>
+						<date>2019-03-15T20:18:26Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -914,11 +914,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								rdGGKA+FxmHp
-								FXOgux1QUQ==
+								jMGo4ZD28DDO
+								ABP2RzDfng==
 								</data>
 								<key>Size</key>
-								<integer>259163</integer>
+								<integer>259278</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
